--- a/references.bib
+++ b/references.bib
@@ -21,3 +21,11 @@
   pages={2733},
   year={2021}
 }
+@misc{Simohnsohn2019,
+  author = {Uri Simohnsohn},
+  title = {Number-Bunching: A New Tool for Forensic Data Analysis},
+  year = {2019},
+  month = {May 25},
+  url = {http://datacolada.org/77},
+  note = {Retrieved from http://datacolada.org/77}
+}
