--- a/chap-fairness.qmd
+++ b/chap-fairness.qmd
@@ -1,1 +1,5 @@
 # Fairness {#sec-fairness}
+
+::: {.callout-note appearance="simple" .content-visible when-format="html"}
+This page is currently under construction.
+:::
