--- a/chap-planning.qmd
+++ b/chap-planning.qmd
@@ -1,1 +1,5 @@
 # Planning {#sec-planning}
+
+::: {.callout-note appearance="simple" .content-visible when-format="html"}
+This page is currently under construction.
+:::
