--- a/chap-selection.qmd
+++ b/chap-selection.qmd
@@ -1,1 +1,5 @@
 # Selection {#sec-selection}
+
+::: {.callout-note appearance="simple" .content-visible when-format="html"}
+This page is currently under construction.
+:::
