--- a/chap-estimation.qmd
+++ b/chap-estimation.qmd
@@ -1,4 +1,4 @@
-# Estimation {#sec-estimation}
+# Ture Value Estimation {#sec-estimation}
 
 ::: {.callout-note appearance="simple" .content-visible when-format="html"}
 This page is currently under construction.
