--- a/chap-bunching.qmd
+++ b/chap-bunching.qmd
@@ -5,3 +5,62 @@ The repeated values analysis analyzes the frequency with which values get repeat
 To determine whether the data show an excessive amount of bunching, the null hypothesis that the data do not contain an unexpected amount of repeated values is tested. To quantify what is expected, this test requires the assumption that the integer portions of the numbers are not associated with their decimal portions.
 
 ## A practical example in JASP
+
+Let's explore an example analysis of repeated values. To follow along, open the 'Assessing Benford's Law' dataset from the Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Assessing Benford's Law' (not the green JASP-icon button).
+
+![](img/bunching/bunching-1.png){fig-align="center" width=100%}
+
+### Main settings
+
+The interface ...
+
+![](img/bunching/bunching-2.png){fig-align="center" width=75%}
+
+These are the main settings for the analysis.
+
+- **Variable:** ...
+- **Tests:** ...
+- **Shuffle decimal digits:** ...
+- **Explanatory text:** ...
+  + **Confidence:** ...
+
+### Main output
+
+![](img/bunching/bunching-3.png){fig-align="center" width=50%}
+
+### Report
+
+These following settings enable you to expand the report with additional output, such as tables and figures.
+
+![](img/bunching/bunching-4.png){fig-align="center" width=75%}
+
+#### Tables
+
+The following tables are available.
+
+- **Assumption checks:** ...
+
+  ![](img/bunching/bunching-5.png){fig-align="center" width=75%}
+
+- **Frequency table:** ...
+
+  ![](img/bunching/bunching-6.png){fig-align="center" width=40%}
+
+#### Plots
+
+The following figures are available.
+
+- **Observed vs. expected:** ...
+
+  ![](img/bunching/bunching-7.png){fig-align="center" width=75%}
+
+- **Histogram:** ...
+
+  ![](img/bunching/bunching-8.png){fig-align="center" width=75%}
+
+### Advanced
+
+These following advanced settings enable you to tailor the analysis to your liking.
+
+- **Number of samples:** ...
+- **Seed:** ...
