--- a/chap-benford.qmd
+++ b/chap-benford.qmd
@@ -2,13 +2,11 @@
 
 Benford's law states that the distribution of leading digits in a population naturally follows a certain distribution. In auditing, assessing whether a distribution of digits in the population conforms to Benford's law may provide additional evidence that the items or transactions in a population might need further investigation.
 
-## A practical example in JASP
-
 Let's explore an example analysis of Benford's law. To follow along, open the 'Assessing Benford's Law' dataset from the Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Assessing Benford's Law' (not the green JASP-icon button).
 
 ![](img/benford/benford-1.png){fig-align="center" width=100%}
 
-### Main settings
+## Main settings
 
 The interface of the Benford's law analysis in JASP is shown below. We will investigate whether the distribution of first digits in the variable 'value', which represents the recorded values of transactions in a financial population, adheres to Benford's law. That is, the null hypothesis, H$_0$, states that the distribution of first digits follows Benford's law, while the alternative hypothesis, H$_1$, states that it does not.
 
@@ -23,7 +21,7 @@ These are the main settings for the analysis.
 - **Bayes factor:** Select which Bayes factor is displayed in the main output table. 'BF$_{10}$' represents the Bayes factor in favor of the alternative hypothesis over the null hypothesis, 'BF$_{01}$' represents the Bayes factor in favor of the null hypothesis over the alternative hypothesis, and 'Log(BF$_{10}$)' represents the logarithm of BF$_{10}$.
 - **Explanatory text:** Finally, select whether to show explanatory text in the output.
 
-### Main output
+## Main output
 
 The main table in the output, shown below, shows the sample size (*n*), the mean absolute deviation (MAD), the chi-square value ($X^2$) and its degrees of freedom (*df*). The table shows a p-value of 0.478, indicating that H$_0$ should not be rejected at a significance level of 5%. Furthermore, the table presents the Bayes factor in favor of the null hypothesis, BF$_{01}$, which is 6.9x10$^6$. This suggests that the data provide very strong evidence supporting H$_0$ over H$_1$.
 
@@ -31,29 +29,31 @@ The main table in the output, shown below, shows the sample size (*n*), the mean
 
 Note that non-conformity to Benford's law does not necessarily indicate fraud. A Benford's law analysis should therefore only be used to acquire insight into whether a population might need further investigation.
 
-### Report
+## Report
 
 These following settings enable you to expand the report with additional output, such as tables and figures.
 
 ![](img/benford/benford-4.png){fig-align="center" width=75%}
 
-#### Tables
+### Tables
 
-The following tables are available.
+The following tables can be requested in the 'Report' section of the interface.
 
-- **Frequency table:** Check this box in the 'Report' section to display a table of the observed and expected frequencies of the digits. Clicking the 'Confidence interval' option shows confidence intervals for the observed relative frequencies in the table.
+- **Frequency table:** Check this box to display a table of the observed and expected frequencies of the digits. Clicking the 'Confidence interval' option shows confidence intervals for the observed relative frequencies in the table.
 
   The frequency table displays the observed count for each leading digit in the second column. Adjacent to this, it shows the expected relative frequency under Benford's law alongside the observed relative frequency in the data. Additionally, p-values and Bayes factors are provided to test whether the observed relative frequencies differ from the expected ones. In this case, only the digit 8 has a p-value smaller than 0.05, indicating a significant deviation from the expected relative frequency under Benford's law.
 
   ![](img/benford/benford-5.png){fig-align="center" width=75%}
 
-- **Matched rows:** ...
+- **Matched rows:** Check this box to display a table showing the rows that have a certain number as their leading/last digit(s).
+
+  In the example, we request a table of rows that match the digit 8. The first column displays the row number where the digit is found, and the second column shows the matched value. Using this table, you can identify the transactions that may warrant further investigation.
 
   ![](img/benford/benford-6.png){fig-align="center" width=40%}
 
-#### Plots
+### Plots
 
-The following figures are available.
+The following tables can be requested in the 'Report' section of the interface.
 
 - **Observed vs. expected:** Check this box to display a figure that illustrates the observed frequencies compared to the expected frequencies.
 
@@ -61,18 +61,22 @@ The following figures are available.
 
   ![](img/benford/benford-7.png){fig-align="center" width=75%}
 
-- **Bayes factor robustness check:** ...
+- **Bayes factor robustness check:** Check this box to display a figure that shows the Bayes factor under different specifications of the prior concentration parameter.
+
+  The figure below is referred to as a robustness check. If the Bayes factor supports a particular hypothesis across all reasonable values of the prior concentration parameter, the result is considered robust regarding the choice of prior distribution. In this instance, the figure demonstrates that the Bayes factor consistently provides evidence in favor of the null hypothesis, regardless of the prior concentration parameter values.
 
   ![](img/benford/benford-8.png){fig-align="center" width=75%}
 
-- **Sequential analysis:** ...
+- **Sequential analysis:** Select this box to display a figure illustrating the Bayes factor as a function of sample size, across various prior specifications.
+
+  In the example analysis, the sequential analysis plot demonstrates that the Bayes factor provides increasing evidence in favor of H$_0$ as the sample size grows. Additionally, this evidence is more pronounced when using a more concentrated prior distribution.
 
   ![](img/benford/benford-9.png){fig-align="center" width=75%}
 
-### Advanced
+## Advanced
 
-These following advanced settings enable you to tailor the analysis to your liking.
+The following advanced settings allow you to customize the statistical computations according to your preferences.
 
 ![](img/benford/benford-10.png){fig-align="center" width=75%}
 
-- **Concentration:** Specify the concentration parameter for the Dirichlet prior distribution used to compute the Bayes factor.
+- **Concentration:** Specify the concentration parameter for the Dirichlet prior distribution. Adjusting this value will alter the Bayes factor in the main output table. A larger concentration parameter indicates a more concentrated prior distribution, suggesting that the population proportions are more similar. When testing against the uniform distribution, this implies a stronger belief in H$_0$. Conversely, when testing against Benford's law, it indicates a stronger belief in H$_1$.
