--- a/chap-selection.qmd
+++ b/chap-selection.qmd
@@ -1,5 +1,15 @@
 # Selection {#sec-selection}
 
-::: {.callout-note appearance="simple" .content-visible when-format="html"}
-This page is currently under construction.
-:::
+This page is currently under construction...
+
+## Main settings
+
+## Main output
+
+## Report
+
+### Tables
+
+### Figures
+
+## Export
